Fixed header responsiveness on small screens

--- a/Frontend/src/static/styles/App.css
+++ b/Frontend/src/static/styles/App.css
@@ -32,3 +32,22 @@
     height:10em;
     width: 100%;
 }
+
+@media(max-width:1024px) {
+    .header {
+        height: 8em;
+        width: 100%;
+    }
+}
+
+@media(max-width:800px) {
+    .header {
+        height: 6em;
+    }
+}
+
+@media(max-width:600px) {
+    .header {
+        height: 4em;
+    }
+}
